// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> Checked story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="radio"
  >
    <span
      class="input__wrapper"
    >
      <input
        checked=""
        class="radio__input"
        id=":r1:"
        name="option-checked"
        readonly=""
        type="radio"
      />
      <span
        class="radio__container"
      />
      <span
        class="radio__selected"
      />
    </span>
    <div
      class="radio__labels"
    >
      <label
        class="label"
        for=":r1:"
      >
        <span
          class="text text--body-md"
        >
          Option 1
        </span>
         
      </label>
    </div>
  </div>
</div>
`;

exports[`<Radio /> Default story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="radio"
  >
    <span
      class="input__wrapper"
    >
      <input
        class="radio__input"
        id=":r0:"
        name="option-1"
        readonly=""
        type="radio"
      />
      <span
        class="radio__container"
      />
      <span
        class="radio__selected"
      />
    </span>
    <div
      class="radio__labels"
    >
      <label
        class="label"
        for=":r0:"
      >
        <span
          class="text text--body-md"
        >
          Option 1
        </span>
         
      </label>
    </div>
  </div>
</div>
`;

exports[`<Radio /> Disabled story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="radio"
  >
    <span
      class="input__wrapper input__wrapper--disabled"
    >
      <input
        class="radio__input"
        disabled=""
        id=":r2:"
        name="option-disabled"
        readonly=""
        type="radio"
      />
      <span
        class="radio__container"
      />
      <span
        class="radio__selected"
      />
    </span>
    <div
      class="radio__labels"
    >
      <label
        class="label label--disabled"
        for=":r2:"
      >
        <span
          class="text text--body-md"
        >
          Option 1
        </span>
         
      </label>
    </div>
  </div>
</div>
`;

exports[`<Radio /> DisabledAndChecked story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="radio"
  >
    <span
      class="input__wrapper input__wrapper--disabled"
    >
      <input
        checked=""
        class="radio__input"
        disabled=""
        id=":r3:"
        name="option-disabled"
        readonly=""
        type="radio"
      />
      <span
        class="radio__container"
      />
      <span
        class="radio__selected"
      />
    </span>
    <div
      class="radio__labels"
    >
      <label
        class="label label--disabled"
        for=":r3:"
      >
        <span
          class="text text--body-md"
        >
          Option 1
        </span>
         
      </label>
    </div>
  </div>
</div>
`;

exports[`<Radio /> Error story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="radio radio--error"
  >
    <span
      class="input__wrapper"
    >
      <input
        class="radio--error radio__input"
        id=":r4:"
        name="option-error"
        readonly=""
        type="radio"
      />
      <span
        class="radio__container"
      />
      <span
        class="radio__selected"
      />
    </span>
    <div
      class="radio__labels"
    >
      <label
        class="label"
        for=":r4:"
      >
        <span
          class="text text--body-md"
        >
          Option 1
        </span>
         
      </label>
    </div>
  </div>
</div>
`;

exports[`<Radio /> ErrorAndChecked story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="radio radio--error"
  >
    <span
      class="input__wrapper"
    >
      <input
        checked=""
        class="radio--error radio__input"
        id=":r5:"
        name="option-error"
        readonly=""
        type="radio"
      />
      <span
        class="radio__container"
      />
      <span
        class="radio__selected"
      />
    </span>
    <div
      class="radio__labels"
    >
      <label
        class="label"
        for=":r5:"
      >
        <span
          class="text text--body-md"
        >
          Option 1
        </span>
         
      </label>
    </div>
  </div>
</div>
`;

exports[`<Radio /> LongLabels story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    style="display: grid; width: 320px; grid-template-columns: repeat(2, minmax(0, 1fr)); gap: 16px;"
  >
    <div
      class="radio"
    >
      <span
        class="input__wrapper"
      >
        <input
          checked=""
          class="radio__input"
          id=":r8:"
          name="option-long-label"
          readonly=""
          type="radio"
        />
        <span
          class="radio__container"
        />
        <span
          class="radio__selected"
        />
      </span>
      <div
        class="radio__labels"
      >
        <label
          class="label"
          for=":r8:"
        >
          <span
            class="text text--body-md"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit
          </span>
           
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Radio /> WithSublabel story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="radio"
  >
    <span
      class="input__wrapper"
    >
      <input
        class="radio__input"
        id=":r6:"
        name="option-1"
        readonly=""
        type="radio"
      />
      <span
        class="radio__container"
      />
      <span
        class="radio__selected"
      />
    </span>
    <div
      class="radio__labels"
    >
      <label
        class="label"
        for=":r6:"
      >
        <span
          class="text text--body-md"
        >
          Option 1
        </span>
         
      </label>
      <span
        class="text text--body-sm radio__sub-label"
      >
        Some additional label text
      </span>
    </div>
  </div>
</div>
`;

exports[`<Radio /> WithoutVisibleLabel story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="radio"
  >
    <span
      class="input__wrapper"
    >
      <input
        aria-label="unchecked radio button"
        class="radio__input"
        id=":r7:"
        name="option-1"
        readonly=""
        type="radio"
      />
      <span
        class="radio__container"
      />
      <span
        class="radio__selected"
      />
    </span>
    <div
      class="radio__labels"
    />
  </div>
</div>
`;
